# obot-entra-oauth-examples

./: .env.example  .gitignore  CLAUDE.md  README.md  server.py  setup-azure.sh
example-no-obo/: pyproject.toml
example-obo/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py  setup-azure.sh
