[project]
name = "azure-oauth-obo-demo"
version = "0.1.0"
description = "FastMCP server with Azure Entra ID OAuth and OBO token exchange"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "fastmcp>=2.14.5",
    "httpx>=0.28.1",
    "msal>=1.34.0",
    "pydantic-settings>=2.0.0",
]
